syntax="proto3";

package accounting.v1alpha1;

option go_package = "github.com/fdymylja/tmos/apis/accounting/v1alpha1";

import "apis/core/meta/v1alpha1/meta.proto";

// Balance defines an account balance
message Balance {
  core.meta.v1alpha1.State state = 1;
  // currency is the name of the currency
  string currency = 2;
  // amount is the amount he owns
  int64 amount = 3;
}

// MsgSend is used to send money
message MsgSend {
  core.meta.v1alpha1.Transition transition = 1;
  string currency = 2;
  int64 amount = 3;
  string sender = 4;
  string recipient = 5;
}