syntax="proto3";

package core.tx.v1alpha1;

option go_package = "github.com/fdymylja/tmos/apis/core/tx/v1alpha1";

import "google/protobuf/any.proto";

message Tx {
  repeated google.protobuf.Any state_transitions = 1;
}